--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 header{
   height: 100vh;
-  background-image: linear-gradient(to top, rgba(161, 140, 209, 0.3) 0%, rgba(251, 194, 235, 0.3) 100%), url(../img/woman.jpg);
+  background-image: linear-gradient(to top, rgba(161, 140, 209, 0.3) 0%, rgba(251, 194, 235, 0.3) 100%), url(/img/woman.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
